# zoom-mcp

./: .cursorrules  .dockerignore  .env.example  .gitignore  DEPLOY-TO-COOLIFY.md  DEPLOYMENT-COMPARISON.md  Dockerfile  GUMLOOP-INTEGRATION.md  LICENSE  README.md  deploy-cloudflare.md  deploy-coolify.md  deploy-vps.md  docker-compose.yml  meeting_templates.json  pyproject.toml  readme-updates.md  starting-zoom-mcp.md
docs/: API.md
scripts/: README_TESTING.md  check_env.py  setup.sh  setup_zoom_auth.py  test_all_endpoints.py  test_zoom_connection.py
src/zoom_mcp/: __init__.py  api.py  cli.py  run_combined.py  server.py
src/zoom_mcp/auth/: __init__.py  zoom_auth.py
src/zoom_mcp/resources/: __init__.py  recordings.py
src/zoom_mcp/tools/: __init__.py  contacts.py  date_parser.py  meeting_management.py  meeting_notes.py  meetings.py  personal_contacts.py  recordings.py  users.py
tests/: test_zoom_auth.py
